feat(api): add exports contract
